--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera!</title>
 </head>
 <body>
-<hi>Hello Coursera!</hi>
+<hi>Hello Coursera!.its a great course</hi>
 </body>
 </html>
